--- a/JS project/index.css
+++ b/JS project/index.css
@@ -33,6 +33,8 @@ body{
 .input-area input[type="text"]{
     width: 96%;
     border-radius: 10px;
+    background-color: rgb(200, 255, 0);
+    font-weight: 600;
 }
 .button-area{
     
@@ -77,6 +79,11 @@ button{
     border-radius: 50%;
     cursor: pointer;
     border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 @media screen and (max-width: 1400){
     .outer-box{
